# internet-ml

./: .containerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  CITATION.bib  CITATION.cff  Makefile  cookiecutter-config-file.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/: CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  TODO.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  codeql.yml
container/: README.md
docker/web/frontend/: Dockerfile
internet_ml/: README.md  __init__.py  __main__.py
internet_ml/NLP/: README.md
internet_ml/NLP/no_context/: QA.py  internet_cache.pkl  is_relevant_cache.pkl  test.py
internet_ml/tools/: ChatGPT.py
internet_ml/tools/NLP/: ChatGPT.py  is_relevant.py  keywords.py  normalize.py  relevancy.py  sentencize.py
internet_ml/tools/NLP/data/: adremover.py  internet.py  internet_cache.pkl  is_relevant_cache.pkl
internet_ml/tools/NLP/ml/dataset/: README.md  long_QA.py
internet_ml/tools/NLP/ml/training/: gpt-neox-20b-quac.py
internet_ml/utils/: config.py
internet_ml/utils/NLP/: constants.py
research/Internet-NLP/paper/: compile.sh  main.tex  ref.bib
research/Internet-NLP/paper/Internet-NLP/: control_flow.tex  main.tex
research/Internet-NLP/paper/abstract/: main.tex
research/Internet-NLP/paper/introduction/: main.tex
research/Internet-NLP/paper/preliminaries/: main.tex
research/Internet-NLP/paper/related_work/: main.tex
scripts/: README.md  for_folder.sh  git.sh  publish.sh
tests/: README.md
tests/test_tools/NLP/: test_normalize.py
tests/test_tools/NLP/test_data/: test_internet.py
web/: Dockerfile  README.md  run.sh
web/backend/: .gitignore  Dockerfile  requirements.txt  run.sh
web/backend/api/: urls.py
web/backend/api/nlp/: apps.py  views.py
web/backend/api/nlp/nocontext/: urls.py  views.py
web/backend/api/nlp/nocontext/templates/rest_framework/: api.html
web/backend/backend/: settings.py  urls.py
web/frontend/: .eslintrc.js  jest.config.js  nuxt.config.js  package.json  stylelint.config.js  tailwind.config.js  tsconfig.json
web/frontend/.github/: dependabot.yml
web/frontend/.github/workflows/: ci.yml
web/frontend/assets/: .gitignore
web/frontend/assets/css/: main.scss  url.module.scss
web/frontend/components/: LoadingWheel.vue  NavBar.vue
web/frontend/pages/: NLP.vue  index.vue
web/frontend/pages/NLP/: index.vue
web/frontend/pages/NLP/no-context/: index.vue  question-answer.vue  question-answering.vue
web/internet_ml_frontend/: README.md  package.json  tailwind.config.js
web/internet_ml_frontend/app/: globals.css  head.tsx  layout.tsx  page.tsx
web/internet_ml_frontend/app/nlp/: page.tsx
web/internet_ml_server/: README.md  manage.py  pyproject.toml
web/internet_ml_server/api/: urls.py  views.py
web/internet_ml_server/api/nlp/: urls.py
web/internet_ml_server/api/nlp/context/: apps.py
web/internet_ml_server/api/nlp/nocontext/: apps.py  urls.py  views.py
web/internet_ml_server/api/nlp/nocontext/templates/rest_framework/: api.html
web/internet_ml_server/api/nlp/nocontext/tools/: question_answer.py
web/internet_ml_server/api/question_answer/: apps.py  urls.py  views.py
web/internet_ml_server/api/question_answer/templates/: index.question_answer.dj.html
web/internet_ml_server/api/templates/: index.api.dj.html
web/internet_ml_server/internet_ml_server/: asgi.py  settings.py  urls.py  views.py  wsgi.py
web/internet_ml_server/internet_ml_server/templates/: index.internet_ml_server.dj.html
